Ajout paragraphe sur index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,6 @@
     <p>{{ firstContent }}</p>
     <h1>Contenu de la database :</h1>
     <p>{{ secondContent }}</p>
+    <p>Bonne journée!</p>
 </body>
 </html>
